- Added TreeListView that performs combines the treeview and listview into one and also added project for controls
- BadRegistryKey class uses ListViewItem as base class
- Moved xmlRegistry static functions to Utils class
- Scanner classes are now static to make thread calling faster
- Optimizer wont compact registry if difference is more than 90%
- Hive class implements IDisposable interface
- Implemented TreeViewAdv into Startup Manager and removed vista message when running a program
- ExtractFileLocation() is private and integrated into ExtractArguments()
- Added images to startup manager tree view
- Fixed bug in uninstall manager that causes not to update listview properly
- Startup and uninstall manager can no longer be minimized and maximized
- Buttons are bigger in Uninstall manger and it is not started maximized
- Displays message box instead of notify box when form is activated
- Moved Logger class back to seperate file
- Opens log file after scanning finishes
- Doesnt show crash reporter when debugging is enabled
- Optimizer will now be in its own project (Little Registry Optimizer)
- LaunchURI() checks for default browser HKCR\HTTP\shell\open\command
- Startup Manager will check if item is leaf before executing operation

+ Version 1.1 Released

- Removed HKLM from subkey path in RemoveFromRegistry()
- Removed View Changelog from main menu
- Checks for updates every 2 weeks
- Fixed invalid argument when trying to view registry key without value name
- Crash reporter wont be displayed when debugging
- Updated assembly info
- Fixed installer script so it deletes desktop shortcut
- Checks for missing CLSID references in ProgID's
- Added sorter for List View in main dialog
- Scans for missing installer folders (HKLM\SOFTWARE\Microsoft\Windows\CurrentVersion\Installer\Folders)
- Makes sure registry key is writable before adding it to array
- Displays type of exception in crash reporter
- Log files are copied and displayed only if there were bad registry keys